# Evlk-Shell-Library

./: CMakeLists.txt  README.md  library.properties
doc/: README-CN.md
examples/shell/: shell.ino
src/: ecli_begin.h  ecli_end.h  evlk_Shell.cpp  evlk_Shell.h  evlk_cli.h  evlk_stand_syscli.h
src/evlk_dictman/: evlk_dictman.cpp  evlk_dictman.h
src/evlk_stand_syscli/: evlk_stand_syscli.cpp  evlk_stand_syscli.h
